--- a/blocks/explorer-teaser/explorer-teaser.css
+++ b/blocks/explorer-teaser/explorer-teaser.css
@@ -26,7 +26,7 @@
 
 .explorer-teaser > div > div:nth-child(2) p {
     margin: 0;
-    padding: 0 30px 20px 20px;
+    padding: 0 var(--spacing-l) var(--spacing-m) var(--spacing-m);
 }
 
 .explorer-teaser > div > div:first-child > p:has(picture) {
@@ -36,8 +36,8 @@
 
 .explorer-teaser > div > div:nth-child(2) h3 {
     font-size: 1.17em;
-    padding: 20px 30px 0 20px;
-    margin: 0 0 10px;
+    padding: var(--spacing-m) var(--spacing-l) 0 var(--spacing-m);
+    margin: 0 0 var(--spacing-xs);
     border-top: 1px solid var(--border-color);
 }
 
@@ -74,10 +74,10 @@
     white-space: break-spaces;
     text-align: right;
     max-width: 475px;
-    padding: 10px 20px 10px 10px;
-    margin-right: 15px;
+    padding: var(--spacing-xs) var(--spacing-m) var(--spacing-xs) var(--spacing-xs);
+    margin-right: var(--spacing-s);
     margin-top: 80px;
-    margin-left: 30px;
+    margin-left: var(--spacing-l);
 }
 
 .explorer-teaser > div > div:nth-child(2) {
@@ -90,8 +90,8 @@
 
 .explorer-teaser > div > div:nth-child(2) > p:has(picture) {
     grid-row: auto / span 2;
-    margin-left: 15px;
-    padding: 20px 15px;
+    margin-left: var(--spacing-s);
+    padding: var(--spacing-m) var(--spacing-s);
     border-top: 1px solid var(--border-color);
 }
 
@@ -118,6 +118,10 @@
     background-color: var(--link-highlight-color);
 }
 
+.explorer-teaser > div > div:nth-child(2) p:last-child {
+    line-height: var(--body-font-line-height);
+}
+
 .explorer-teaser > div > div:nth-child(2) p:last-child a.button {
     border: none;
     text-transform: none;
@@ -142,7 +146,7 @@
     grid-column: 2;
     margin-left: auto;
     padding: 0;
-    margin-right: -15px;
+    margin-right: var(--spacing-s);
 }
 
 @media (min-width: 768px) {
@@ -209,18 +213,18 @@
     .explorer-teaser > div > div:first-child h3 {
         top: 0;
         right: 0;
-        max-width: 610px;
+        max-width: var(--spacing-xs);
         margin-right: 0;
-        padding: 20px;
+        padding: var(--spacing-m);
     }
 
     .explorer-teaser > div > div:nth-child(2) p {
-        padding: 0 30px;
+        padding: 0 var(--spacing-l);
     }
 
     .explorer-teaser > div > div:nth-child(2) > p:has(picture) {
         border: none;
-        padding: 30px 30px 0;
+        padding: var(--spacing-l) var(--spacing-l) 0;
         margin: 0;
     }
 
@@ -230,7 +234,7 @@
 
     .explorer-teaser > div > div:nth-child(2) h3 {
         border: none;
-        padding: 0 30px;
+        padding: 0 var(--spacing-l);
     }
 
     .explorer-teaser > div > div:nth-child(2) p:nth-last-child(2),
